tests/snapshots/regression/recovery__t16_perform_missing_dot_contextual.snap
---
source: tests/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/recovery/t16_perform_missing_dot_contextual.flx
exit_code: 1

[1 of 7] Compiling  Assert
[2 of 7] Compiling  IO
[3 of 7] Compiling  List
[4 of 7] Compiling  Numeric
[5 of 7] Compiling  Option
[6 of 7] Compiling  String
• 1 error • tests/fixtures/recovery/t16_perform_missing_dot_contextual.flx
error[E034]: Missing Effect Operation Separator

This `perform` expression needs `.` between the effect and operation.

  tests/fixtures/recovery/t16_perform_missing_dot_contextual.flx:1:20
  |
1 | let x = perform IO print("hi")
  |                    ^^^^^

Hint:
  Perform expressions use `perform Effect.op(args...)`.
